// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hiscores getHiscores should default type to HiscoreTypes.normal 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should hit the specified hiscore type endpoint 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool_seasonal/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should make a GET request 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should make a request with the passed in player name 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should properly parse rank and kills for each boss 1`] = `
Object {
  "abyssalSire": Object {
    "kills": "250",
    "rank": "75147",
  },
  "alchemicalHydra": Object {
    "kills": "3334",
    "rank": "5032",
  },
  "barrowsChests": Object {
    "kills": "307",
    "rank": "137028",
  },
  "bryophyta": Object {
    "kills": "23",
    "rank": "34596",
  },
  "callisto": Object {
    "kills": "209",
    "rank": "20461",
  },
  "cerberus": Object {
    "kills": "3000",
    "rank": "6013",
  },
  "chambersOfXeric": Object {
    "kills": "5589",
    "rank": "60",
  },
  "chambersOfXericChallengeMode": Object {
    "kills": "1045",
    "rank": "261",
  },
  "chaosElemental": Object {
    "kills": "150",
    "rank": "25763",
  },
  "chaosFanatic": Object {
    "kills": "249",
    "rank": "13130",
  },
  "commanderZilyana": Object {
    "kills": "2347",
    "rank": "1513",
  },
  "corporealBeast": Object {
    "kills": "7930",
    "rank": "131",
  },
  "corruptedGauntlet": Object {
    "kills": "224",
    "rank": "1946",
  },
  "crazyArchaeologist": Object {
    "kills": "77",
    "rank": "57131",
  },
  "dagannothPrime": Object {
    "kills": "5644",
    "rank": "377",
  },
  "dagannothRex": Object {
    "kills": "6851",
    "rank": "314",
  },
  "dagannothSupreme": Object {
    "kills": "5569",
    "rank": "400",
  },
  "derangedArchaeologist": Object {
    "kills": "50",
    "rank": "17310",
  },
  "gauntlet": Object {
    "kills": "226",
    "rank": "32565",
  },
  "generalGraardor": Object {
    "kills": "10540",
    "rank": "133",
  },
  "giantMole": Object {
    "kills": "4081",
    "rank": "2613",
  },
  "grotesqueGuardians": Object {
    "kills": "5666",
    "rank": "135",
  },
  "hespori": Object {
    "kills": "231",
    "rank": "6828",
  },
  "kalphiteQueen": Object {
    "kills": "1088",
    "rank": "4952",
  },
  "kingBlackDragon": Object {
    "kills": "3938",
    "rank": "1880",
  },
  "kraken": Object {
    "kills": "10696",
    "rank": "627",
  },
  "kreearra": Object {
    "kills": "5960",
    "rank": "285",
  },
  "krilTsutsaroth": Object {
    "kills": "10793",
    "rank": "26",
  },
  "mimic": Object {
    "kills": "39",
    "rank": "277",
  },
  "nex": Object {
    "kills": "1919",
    "rank": "4908",
  },
  "nightmare": Object {
    "kills": "7231",
    "rank": "60",
  },
  "obor": Object {
    "kills": "38",
    "rank": "18065",
  },
  "phosanisNightmare": Object {
    "kills": "131",
    "rank": "9589",
  },
  "sarachnis": Object {
    "kills": "847",
    "rank": "7",
  },
  "scorpia": Object {
    "kills": "1179",
    "rank": "3914",
  },
  "skotizo": Object {
    "kills": "10139",
    "rank": "8",
  },
  "tempoross": Object {
    "kills": "65",
    "rank": "14891",
  },
  "theatreOfBlood": Object {
    "kills": "207",
    "rank": "42296",
  },
  "theatreOfBloodHardMode": Object {
    "kills": "4940",
    "rank": "79",
  },
  "thermonuclearSmokeDevil": Object {
    "kills": "221",
    "rank": "2301",
  },
  "tombsOfAmascut": Object {
    "kills": "2165",
    "rank": "11980",
  },
  "tombsOfAmascutExpertMode": Object {
    "kills": "222",
    "rank": "3258",
  },
  "tzKalZuk": Object {
    "kills": "2015",
    "rank": "1",
  },
  "tzTokJad": Object {
    "kills": "55",
    "rank": "312",
  },
  "venenatis": Object {
    "kills": "94",
    "rank": "838",
  },
  "vetion": Object {
    "kills": "1226",
    "rank": "3984",
  },
  "vorkath": Object {
    "kills": "641",
    "rank": "2397",
  },
  "wintertodt": Object {
    "kills": "1410",
    "rank": "31217",
  },
  "zalcano": Object {
    "kills": "4832",
    "rank": "507",
  },
  "zulrah": Object {
    "kills": "1302",
    "rank": "2262",
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank and score for each minigame 1`] = `
Object {
  "bountyHunter": Object {
    "rank": "-1",
    "score": "-1",
  },
  "bountyHunterRogues": Object {
    "rank": "-1",
    "score": "-1",
  },
  "clueScrollsAll": Object {
    "rank": "541",
    "score": "5637",
  },
  "clueScrollsBeginner": Object {
    "rank": "1838",
    "score": "601",
  },
  "clueScrollsEasy": Object {
    "rank": "7103",
    "score": "500",
  },
  "clueScrollsElite": Object {
    "rank": "4285",
    "score": "200",
  },
  "clueScrollsHard": Object {
    "rank": "33018",
    "score": "301",
  },
  "clueScrollsMaster": Object {
    "rank": "17",
    "score": "1534",
  },
  "clueScrollsMedium": Object {
    "rank": "690",
    "score": "2501",
  },
  "leaguePoints": Object {
    "rank": "-1",
    "score": "-1",
  },
  "lms": Object {
    "rank": "163363",
    "score": "507",
  },
  "pvpArena": Object {
    "rank": "-1",
    "score": "-1",
  },
  "riftsClosed": Object {
    "rank": "56",
    "score": "2277",
  },
  "soulWarsZeal": Object {
    "rank": "3375",
    "score": "14724",
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank, level, and xp for each skill 1`] = `
Object {
  "agility": Object {
    "level": "99",
    "rank": "701",
    "xp": "36007958",
  },
  "attack": Object {
    "level": "99",
    "rank": "824",
    "xp": "104224886",
  },
  "construction": Object {
    "level": "99",
    "rank": "3117",
    "xp": "14165910",
  },
  "cooking": Object {
    "level": "99",
    "rank": "877",
    "xp": "200000000",
  },
  "crafting": Object {
    "level": "99",
    "rank": "4270",
    "xp": "17691019",
  },
  "defence": Object {
    "level": "99",
    "rank": "530",
    "xp": "108054847",
  },
  "farming": Object {
    "level": "99",
    "rank": "1101",
    "xp": "113764644",
  },
  "firemaking": Object {
    "level": "99",
    "rank": "841",
    "xp": "126998621",
  },
  "fishing": Object {
    "level": "99",
    "rank": "1704",
    "xp": "46330395",
  },
  "fletching": Object {
    "level": "99",
    "rank": "6184",
    "xp": "19525268",
  },
  "herblore": Object {
    "level": "99",
    "rank": "5090",
    "xp": "15559824",
  },
  "hitpoints": Object {
    "level": "99",
    "rank": "96",
    "xp": "200000000",
  },
  "hunter": Object {
    "level": "99",
    "rank": "1363",
    "xp": "53077068",
  },
  "magic": Object {
    "level": "99",
    "rank": "352",
    "xp": "130111372",
  },
  "mining": Object {
    "level": "99",
    "rank": "6090",
    "xp": "20743294",
  },
  "overall": Object {
    "level": "2277",
    "rank": "346",
    "xp": "1816945615",
  },
  "prayer": Object {
    "level": "99",
    "rank": "3520",
    "xp": "14709754",
  },
  "ranged": Object {
    "level": "99",
    "rank": "58",
    "xp": "200000000",
  },
  "runecrafting": Object {
    "level": "99",
    "rank": "943",
    "xp": "37806702",
  },
  "slayer": Object {
    "level": "99",
    "rank": "578",
    "xp": "63465365",
  },
  "smithing": Object {
    "level": "99",
    "rank": "15968",
    "xp": "13761910",
  },
  "strength": Object {
    "level": "99",
    "rank": "201",
    "xp": "200000000",
  },
  "thieving": Object {
    "level": "99",
    "rank": "8740",
    "xp": "22601332",
  },
  "woodcutting": Object {
    "level": "99",
    "rank": "1993",
    "xp": "58345446",
  },
}
`;

exports[`Hiscores getHiscores should return skills, minigames, and bosses from a csv 1`] = `
Object {
  "bosses": Object {
    "abyssalSire": Object {
      "kills": "250",
      "rank": "75147",
    },
    "alchemicalHydra": Object {
      "kills": "3334",
      "rank": "5032",
    },
    "barrowsChests": Object {
      "kills": "307",
      "rank": "137028",
    },
    "bryophyta": Object {
      "kills": "23",
      "rank": "34596",
    },
    "callisto": Object {
      "kills": "209",
      "rank": "20461",
    },
    "cerberus": Object {
      "kills": "3000",
      "rank": "6013",
    },
    "chambersOfXeric": Object {
      "kills": "5589",
      "rank": "60",
    },
    "chambersOfXericChallengeMode": Object {
      "kills": "1045",
      "rank": "261",
    },
    "chaosElemental": Object {
      "kills": "150",
      "rank": "25763",
    },
    "chaosFanatic": Object {
      "kills": "249",
      "rank": "13130",
    },
    "commanderZilyana": Object {
      "kills": "2347",
      "rank": "1513",
    },
    "corporealBeast": Object {
      "kills": "7930",
      "rank": "131",
    },
    "corruptedGauntlet": Object {
      "kills": "224",
      "rank": "1946",
    },
    "crazyArchaeologist": Object {
      "kills": "77",
      "rank": "57131",
    },
    "dagannothPrime": Object {
      "kills": "5644",
      "rank": "377",
    },
    "dagannothRex": Object {
      "kills": "6851",
      "rank": "314",
    },
    "dagannothSupreme": Object {
      "kills": "5569",
      "rank": "400",
    },
    "derangedArchaeologist": Object {
      "kills": "50",
      "rank": "17310",
    },
    "gauntlet": Object {
      "kills": "226",
      "rank": "32565",
    },
    "generalGraardor": Object {
      "kills": "10540",
      "rank": "133",
    },
    "giantMole": Object {
      "kills": "4081",
      "rank": "2613",
    },
    "grotesqueGuardians": Object {
      "kills": "5666",
      "rank": "135",
    },
    "hespori": Object {
      "kills": "231",
      "rank": "6828",
    },
    "kalphiteQueen": Object {
      "kills": "1088",
      "rank": "4952",
    },
    "kingBlackDragon": Object {
      "kills": "3938",
      "rank": "1880",
    },
    "kraken": Object {
      "kills": "10696",
      "rank": "627",
    },
    "kreearra": Object {
      "kills": "5960",
      "rank": "285",
    },
    "krilTsutsaroth": Object {
      "kills": "10793",
      "rank": "26",
    },
    "mimic": Object {
      "kills": "39",
      "rank": "277",
    },
    "nex": Object {
      "kills": "1919",
      "rank": "4908",
    },
    "nightmare": Object {
      "kills": "7231",
      "rank": "60",
    },
    "obor": Object {
      "kills": "38",
      "rank": "18065",
    },
    "phosanisNightmare": Object {
      "kills": "131",
      "rank": "9589",
    },
    "sarachnis": Object {
      "kills": "847",
      "rank": "7",
    },
    "scorpia": Object {
      "kills": "1179",
      "rank": "3914",
    },
    "skotizo": Object {
      "kills": "10139",
      "rank": "8",
    },
    "tempoross": Object {
      "kills": "65",
      "rank": "14891",
    },
    "theatreOfBlood": Object {
      "kills": "207",
      "rank": "42296",
    },
    "theatreOfBloodHardMode": Object {
      "kills": "4940",
      "rank": "79",
    },
    "thermonuclearSmokeDevil": Object {
      "kills": "221",
      "rank": "2301",
    },
    "tombsOfAmascut": Object {
      "kills": "2165",
      "rank": "11980",
    },
    "tombsOfAmascutExpertMode": Object {
      "kills": "222",
      "rank": "3258",
    },
    "tzKalZuk": Object {
      "kills": "2015",
      "rank": "1",
    },
    "tzTokJad": Object {
      "kills": "55",
      "rank": "312",
    },
    "venenatis": Object {
      "kills": "94",
      "rank": "838",
    },
    "vetion": Object {
      "kills": "1226",
      "rank": "3984",
    },
    "vorkath": Object {
      "kills": "641",
      "rank": "2397",
    },
    "wintertodt": Object {
      "kills": "1410",
      "rank": "31217",
    },
    "zalcano": Object {
      "kills": "4832",
      "rank": "507",
    },
    "zulrah": Object {
      "kills": "1302",
      "rank": "2262",
    },
  },
  "minigames": Object {
    "bountyHunter": Object {
      "rank": "-1",
      "score": "-1",
    },
    "bountyHunterRogues": Object {
      "rank": "-1",
      "score": "-1",
    },
    "clueScrollsAll": Object {
      "rank": "541",
      "score": "5637",
    },
    "clueScrollsBeginner": Object {
      "rank": "1838",
      "score": "601",
    },
    "clueScrollsEasy": Object {
      "rank": "7103",
      "score": "500",
    },
    "clueScrollsElite": Object {
      "rank": "4285",
      "score": "200",
    },
    "clueScrollsHard": Object {
      "rank": "33018",
      "score": "301",
    },
    "clueScrollsMaster": Object {
      "rank": "17",
      "score": "1534",
    },
    "clueScrollsMedium": Object {
      "rank": "690",
      "score": "2501",
    },
    "leaguePoints": Object {
      "rank": "-1",
      "score": "-1",
    },
    "lms": Object {
      "rank": "163363",
      "score": "507",
    },
    "pvpArena": Object {
      "rank": "-1",
      "score": "-1",
    },
    "riftsClosed": Object {
      "rank": "56",
      "score": "2277",
    },
    "soulWarsZeal": Object {
      "rank": "3375",
      "score": "14724",
    },
  },
  "skills": Object {
    "agility": Object {
      "level": "99",
      "rank": "701",
      "xp": "36007958",
    },
    "attack": Object {
      "level": "99",
      "rank": "824",
      "xp": "104224886",
    },
    "construction": Object {
      "level": "99",
      "rank": "3117",
      "xp": "14165910",
    },
    "cooking": Object {
      "level": "99",
      "rank": "877",
      "xp": "200000000",
    },
    "crafting": Object {
      "level": "99",
      "rank": "4270",
      "xp": "17691019",
    },
    "defence": Object {
      "level": "99",
      "rank": "530",
      "xp": "108054847",
    },
    "farming": Object {
      "level": "99",
      "rank": "1101",
      "xp": "113764644",
    },
    "firemaking": Object {
      "level": "99",
      "rank": "841",
      "xp": "126998621",
    },
    "fishing": Object {
      "level": "99",
      "rank": "1704",
      "xp": "46330395",
    },
    "fletching": Object {
      "level": "99",
      "rank": "6184",
      "xp": "19525268",
    },
    "herblore": Object {
      "level": "99",
      "rank": "5090",
      "xp": "15559824",
    },
    "hitpoints": Object {
      "level": "99",
      "rank": "96",
      "xp": "200000000",
    },
    "hunter": Object {
      "level": "99",
      "rank": "1363",
      "xp": "53077068",
    },
    "magic": Object {
      "level": "99",
      "rank": "352",
      "xp": "130111372",
    },
    "mining": Object {
      "level": "99",
      "rank": "6090",
      "xp": "20743294",
    },
    "overall": Object {
      "level": "2277",
      "rank": "346",
      "xp": "1816945615",
    },
    "prayer": Object {
      "level": "99",
      "rank": "3520",
      "xp": "14709754",
    },
    "ranged": Object {
      "level": "99",
      "rank": "58",
      "xp": "200000000",
    },
    "runecrafting": Object {
      "level": "99",
      "rank": "943",
      "xp": "37806702",
    },
    "slayer": Object {
      "level": "99",
      "rank": "578",
      "xp": "63465365",
    },
    "smithing": Object {
      "level": "99",
      "rank": "15968",
      "xp": "13761910",
    },
    "strength": Object {
      "level": "99",
      "rank": "201",
      "xp": "200000000",
    },
    "thieving": Object {
      "level": "99",
      "rank": "8740",
      "xp": "22601332",
    },
    "woodcutting": Object {
      "level": "99",
      "rank": "1993",
      "xp": "58345446",
    },
  },
}
`;
